gcc/testsuite/rust/rustc/ui/extoption_env-no-args.rs
fn main() { option_env!(); } // { dg-error "" "" { target *-*-* } }

